--- a/Hello/.classpath
+++ b/Hello/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="D:/Documents/eclipse-apache-tomcat-9.0.0.M9/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
