--- a/Oblig1_Oppgave5_h148911_h147019/.project
+++ b/Oblig1_Oppgave5_h148911_h147019/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Oblig1_Oppgave4</name>
+	<name>Oblig1_Oppgave5_h148911_h147019</name>
 	<comment></comment>
 	<projects>
 	</projects>
