--- a/F07a - JPA Klasser og Studenter/.project
+++ b/F07a - JPA Klasser og Studenter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Oblig1_Oppgave1_LoginServlet</name>
+	<name>F07a - JPA Klasser og Studenter</name>
 	<comment></comment>
 	<projects>
 	</projects>
