--- a/Oving2_Oppgave1/.project
+++ b/Oving2_Oppgave1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Oblig1_Oppgave5_FAVORITTFRUKT</name>
+	<name>Oving2_Oppgave1</name>
 	<comment></comment>
 	<projects>
 	</projects>
