--- a/Oving2_Handleliste/.project
+++ b/Oving2_Handleliste/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Oblig1_Oppgave6_h148911_h147019</name>
+	<name>Oving2_Handleliste</name>
 	<comment></comment>
 	<projects>
 	</projects>
