--- a/Oving2_Oppgave2_Sesjoner/.project
+++ b/Oving2_Oppgave2_Sesjoner/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Oving2_Oppgave2</name>
+	<name>Oving2_Oppgave2_Sesjoner</name>
 	<comment></comment>
 	<projects>
 	</projects>
